--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/register": "^7.25.9",
     "@babel/runtime": "^7.26.0",
     "@nestjs/testing": "^11.0.3",
+    "@nestjs/swagger": "^11.2.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
